feat::Added 'login' page

--- a/dcrm/website/templates/home.html
+++ b/dcrm/website/templates/home.html
@@ -1,1 +1,32 @@
-<h1>HELLO WORLD </h1>
+{% extends "base.html" %}
+{% block content %}
+
+<div class="col-md-6 offset-md-3">
+<h1>Login</h1>
+</br>
+<form  method="POST" action="{%url 'home'%}">
+    {% csrf_token %}
+    <form>
+        <div class="mb-3">
+           
+          <input type="text" class="form-control" >
+          
+        <div class="mb-3">
+          
+          <input type="password" class="form-control" >
+        </div>
+        <div class="mb-3 form-check">
+          <input type="checkbox" class="form-check-input" id="exampleCheck1">
+          <label class="form-check-label" for="exampleCheck1">Check me out</label>
+        </div>
+        <button type="submit" class="btn btn-secondary">Login</button>
+      </form>
+</form>    
+
+
+</div>    
+
+{% endblock%}
+
+
+
