--- a/dcrm/website/templates/home.html
+++ b/dcrm/website/templates/home.html
@@ -1,31 +1,31 @@
 {% extends "base.html" %}
 {% block content %}
 
+
 <div class="col-md-6 offset-md-3">
-<h1>Login</h1>
-</br>
-<form  method="POST" action="{%url 'home'%}">
+  {% if user.is_authenticated %}
+
+  <h1>Hello World </h1>
+   {% else %}
+
+  <h1>Login</h1>
+  <br/>
+  
+  <form method="POST" action="{% url 'home' %}">
     {% csrf_token %}
-    <form>
-        <div class="mb-3">
-           
-          <input type="text" class="form-control" >
-          
-        <div class="mb-3">
-          
-          <input type="password" class="form-control" >
-        </div>
-        <div class="mb-3 form-check">
-          <input type="checkbox" class="form-check-input" id="exampleCheck1">
-          <label class="form-check-label" for="exampleCheck1">Check me out</label>
-        </div>
-        <button type="submit" class="btn btn-secondary">Login</button>
-      </form>
-</form>    
-
-
-</div>    
-
+  
+    <div class="mb-3">
+      <input type="text" class="form-control" name="username", placeholder="Username" required>
+      
+    </div><br/>
+    <div class="mb-3">
+      <input type="password" class="form-control" name="password", placeholder="Password" required>
+    </div>
+    <br/>
+    <button type="submit" class="btn btn-secondary">Login</button>
+  
+  </form>   
+{% endif %}
 {% endblock%}
 
 
