--- a/dcrm/website/templates/navbar.html
+++ b/dcrm/website/templates/navbar.html
@@ -15,7 +15,7 @@
             <a class="nav-link" href="{% url 'register'  %}">Register</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="{% url 'login'  %}">Login</a>
+            <a class="nav-link" href="{% url 'home'  %}">Login</a>
           </li>
           {% endif  %}
           
