--- a/dcrm/website/templates/register.html
+++ b/dcrm/website/templates/register.html
@@ -5,5 +5,20 @@
 <div class="col-md-6 offset-md-3">
 <h1>Register</h1>
 <br/>
+
+<form method="POST" action="">
+    {% csrf_token %}
+   
+    {{form.errors}}
+    <div class="alert alert-warning alert-dismissible fade show" role="alert">
+        Your Form Has Errors
+        {% for field in form %}
+            {% if field.errors %}
+                {{ field.errors }}
+            {% endif %}
+        {% endfor %}
+    <br/>        
+    <button type="submit" class="btn btn-secondary">Register</button>       
+        </form>        
 </div>
 {% endblock%}
