--- a/dcrm/website/templates/home.html
+++ b/dcrm/website/templates/home.html
@@ -2,30 +2,76 @@
 {% block content %}
 
 
-<div class="col-md-6 offset-md-3">
+<div class="container">
+<div class="row">
+<div class="col-md-10"> 
   {% if user.is_authenticated %}
 
-  <h1>Hello World </h1>
-   {% else %}
-
-  <h1>Login</h1>
-  <br/>
-  
-  <form method="POST" action="{% url 'home' %}">
-    {% csrf_token %}
-    
-  
-    <div class="mb-3">
-      <input type="text" class="form-control" name="username", placeholder="Username" required>
+<table class="table table-striped table-hover table-bordered">
+<thead class="table-dark">
+<tr>
+  <th scope="col">First Name</th>
+  <th scope="col">Last Name</th>
+  <th scope="col">Email</th>
+  <th scope="col">Phone</th>
+  <th scope="col">Address</th>
+  <th scope="col">City</th>
+  <th scope="col">State</th>
+  <th scope="col">Zipcode</th>
+  <th scope="col">created_at</th> 
+  <th scope="col">id</th>          
+</tr>
+</thead>
+<tbody>
       
-    </div><br/>
-    <div class="mb-3">
-      <input type="password" class="form-control" name="password", placeholder="Password" required>
-    </div>
-    <br/>
-    <button type="submit" class="btn btn-secondary">Login</button>
+
+{% if records %}
+   {% for record in records %}
+   <tr>
+   <td>{{record.first_name }}
+   <td>{{record.last_name }}</td>
+   <td> {{record.email }}</td>
+   <td>{{record.phone }}</td>
+    <td>{{record.address }}</td>
+    <td>{{record.city }}</td>
+    <td>{{record.state }}</td>
+    <td>{{record.zipcode }}</td>
+    <td>{{record.created_at}}</td>
+    <td><a href="{% url 'record'  record.id%}"></a>{{record.id}}</td>
+  </tr>   
   
-  </form>   
+        
+  {%endfor%}
+{%endif%}
+
+{% else %}
+
+<h1>Login</h1>
+<br/>
+
+<form method="POST" action="{% url 'home' %}">
+  {% csrf_token %}
+  
+
+  <div class="mb-3">
+    <input type="text" class="form-control" name="username", placeholder="Username" required>
+    
+  </div><br/>
+  <div class="mb-3">
+    <input type="password" class="form-control" name="password", placeholder="Password" required>
+  </div>
+  <br/>
+  <button type="submit" class="btn btn-secondary">Login</button>
+
+</form>    
+    
+    
+
+
+
+
+
+
 {% endif %}
 {% endblock%}
 
