--- a/dcrm/website/templates/home.html
+++ b/dcrm/website/templates/home.html
@@ -32,16 +32,14 @@
    <td>{{record.last_name }}</td>
    <td> {{record.email }}</td>
    <td>{{record.phone }}</td>
-    <td>{{record.address }}</td>
-    <td>{{record.city }}</td>
-    <td>{{record.state }}</td>
-    <td>{{record.zipcode }}</td>
-    <td>{{record.created_at}}</td>
-    <td><a href="{% url 'record'  record.id%}"></a>{{record.id}}</td>
+   <td>{{record.address }}</td>
+   <td>{{record.city }}</td>
+   <td>{{record.state }}</td>
+   <td>{{record.zipcode }}</td>
+   <td>{{record.created_at}}</td>
+   <td><a href="{% url 'record' record.id %}">{{ record.id }}</a></td>
   </tr>   
-  
-        
-  {%endfor%}
+   {%endfor%}
 {%endif%}
 
 {% else %}
