--- a/dcrm/website/templates/record.html
+++ b/dcrm/website/templates/record.html
@@ -2,11 +2,19 @@
 {% block content %}
 
 
-<h1>Customer Record</h1>
+<div class="card">
+   <div class="card-header">
+      {{customer_record.first_name }}  {{customer_record.last_name }}
+   </div>
+   <div class="card-body">
+     <h5 class="card-title">Special title treatment</h5>
+     <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
+     <a href="#" class="btn btn-primary">Go somewhere</a>
+   </div>
+ </div>
 
 
-   {{customer_record.first_name }}  {{customer_record.last_name }}
-   <br/>
+   
 
    {{customer_record.email }} <br/>
    {{customer_record.phone }} <br/>
@@ -15,7 +23,7 @@
    {{customer_record.state }} <br/>
    {{customer_record.zipcode }} <br/>
    {{customer_record.created_at}} <br/>
-   <td><a href="{% url 'record'  record.id%}"></a>{{record.id}}
+   <td><a href="{% url 'record' record.id %}">{{ record.id }}</a></td>
     
   
 
