--- a/dcrm/website/templates/record.html
+++ b/dcrm/website/templates/record.html
@@ -3,27 +3,48 @@
 
 
 <div class="card">
-   <div class="card-header">
-      {{customer_record.first_name }}  {{customer_record.last_name }}
-   </div>
-   <div class="card-body">
-     <h5 class="card-title">Special title treatment</h5>
-     <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
-     <a href="#" class="btn btn-primary">Go somewhere</a>
-   </div>
- </div>
+  <div class="card-header"><strong>
+    	{{ customer_record.first_name }} 
+		{{ customer_record.last_name }}</strong>
+  </div>
+  <div class="card-body">
 
 
-   
 
-   {{customer_record.email }} <br/>
-   {{customer_record.phone }} <br/>
-   {{customer_record.address }} <br/>
-   {{customer_record.city }} <br/>
-   {{customer_record.state }} <br/>
-   {{customer_record.zipcode }} <br/>
-   {{customer_record.created_at}} <br/>
-   <td><a href="{% url 'record' record.id %}">{{ record.id }}</a></td>
+<p class="card-text">
+<strong>Email: </strong>{{ customer_record.email }}</p>
+
+<p class="card-text">
+<strong>Phone: </strong>{{ customer_record.phone }}
+</p>
+
+<p class="card-text">
+<strong>Address: </strong>{{ customer_record.address }}</p>
+
+<p class="card-text">
+<strong>City: </strong>{{ customer_record.city }}</p>
+
+<p class="card-text">
+<strong>State: </strong>{{ customer_record.state }}</p>
+
+<p class="card-text">
+<strong>Zipcode: </strong>{{ customer_record.zipcode }}</p>
+
+<p class="card-text">
+<strong>Create At: </strong>{{ customer_record.created_at }}</p>
+
+<p class="card-text">
+<strong>ID: </strong>{{ customer_record.id }}</p>
+    
+    
+  </div>
+</div>
+
+
+<br/><br/>
+<a href="{% url 'home' %}" class="btn btn-secondary">Back</a>   
+<a href="{% url 'delete_record' customer_record.id %}" class="btn btn-danger">Delete</a>
+<a href="{% url 'update_record' customer_record.id %}" class="btn btn-secondary">Update Record</a>
     
   
 
